@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.6: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.7: http://docutils.sourceforge.net/" />
 <title>GeanyGenDoc User Manual</title>
 <style type="text/css">
 
@@ -36,6 +36,12 @@ h2.subtitle {
 
 p, dd {
 	text-align: justify;
+}
+
+blockquote {
+	padding-left: 1em;
+	margin-left: 1em;
+	border-left: 3px solid #5c3566;
 }
 
 .literal-block,
@@ -132,7 +138,8 @@ symbols. Its goal is to ease writing documentation for the good.</p>
 </ul>
 </li>
 <li><a class="reference internal" href="#appendix" id="id27">Appendix</a><ul>
-<li><a class="reference internal" href="#configuration-syntax-summary" id="id28">Configuration syntax summary</a></li>
+<li><a class="reference internal" href="#license" id="id28">License</a></li>
+<li><a class="reference internal" href="#configuration-syntax-summary" id="id29">Configuration syntax summary</a></li>
 </ul>
 </li>
 </ul>
@@ -540,8 +547,25 @@ configuration at all.</p>
 </div>
 <div class="section" id="appendix">
 <h1><a class="toc-backref" href="#id27">Appendix</a></h1>
+<div class="section" id="license">
+<h2><a class="toc-backref" href="#id28">License</a></h2>
+<div class="line-block">
+<div class="line">GeanyGenDoc, a Geany plugin to ease generation of source code documentation</div>
+<div class="line">Copyright (C) 2010  Colomban Wendling &lt;<a class="reference external" href="mailto:ban&#64;herbesfolles.org">ban&#64;herbesfolles.org</a>&gt;</div>
+</div>
+<p>This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.</p>
+<p>You should have received a copy of the GNU General Public License
+along with this program.  If not, see &lt;<a class="reference external" href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>&gt;.</p>
+</div>
 <div class="section" id="configuration-syntax-summary">
-<h2><a class="toc-backref" href="#id28">Configuration syntax summary</a></h2>
+<h2><a class="toc-backref" href="#id29">Configuration syntax summary</a></h2>
 <pre class="literal-block">
 string               ::= ( &quot;&quot;&quot; .* &quot;&quot;&quot; | &quot;'&quot; .* &quot;'&quot; )
 constant             ::= [_A-Z][_A-Z0-9]+
@@ -595,7 +619,7 @@ document             ::= ( setting_section? doctype_section? |
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2010-05-22.
+Generated on: 2010-08-16.
 
 </div>
 </body>
